# anki-card-create

./: .gitignore  README.md  pyproject.toml
data/: example.txt
src/: ankicard.py  card_creator.py  models.py  utils.py
tests/: conftest.py  test_card_creator.py  test_mock.py  test_utils.py
