[tool.poetry]
name = "anki-card-create"
version = "0.1.0"
description = ""
authors = ["PeiHsuan Lin <peihsuan.lin@casewise.co.jp>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
googletrans = "4.0.0rc1"
pydantic = "^2.6.4"
langdetect = "^1.0.9"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.1"
ipykernel = "^6.29.4"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
